--- a/Lesson8/pom.xml
+++ b/Lesson8/pom.xml
@@ -7,6 +7,15 @@
     <groupId>org.example</groupId>
     <artifactId>Lesson8</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <dependencies>
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.24</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 
     <properties>
         <maven.compiler.source>19</maven.compiler.source>
