--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
     <groupId>groupId</groupId>
     <artifactId>c18-onl2022</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>pom</packaging>
     <modules>
         <module>Lesson1</module>
         <module>Lesson2</module>
@@ -20,6 +21,8 @@
         <module>Lesson9</module>
         <module>Lesson10</module>
         <module>Lesson11</module>
+        <module>Lesson12</module>
+        <module>Lesson13</module>
     </modules>
 
     <properties>
