--- a/Lesson8/pom.xml
+++ b/Lesson8/pom.xml
@@ -7,6 +7,14 @@
         <artifactId>c18-onl2022</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
+    <dependencies>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.24</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 
     <modelVersion>4.0.0</modelVersion>
     <artifactId>Lesson8</artifactId>
