--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,9 @@
         <module>Lesson13</module>
         <module>Lesson14</module>
         <module>Lesson15</module>
+        <module>Lesson17</module>
+        <module>Lesson18</module>
+        <module>Lesson16</module>
     </modules>
 
     <properties>
