--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,7 @@
         <module>Lesson17</module>
         <module>Lesson18</module>
         <module>Lesson16</module>
+        <module>Lesson19</module>
     </modules>
 
     <properties>
