--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,7 @@
         <module>Lesson18</module>
         <module>Lesson16</module>
         <module>Lesson19</module>
+        <module>Lesson20</module>
     </modules>
 
     <properties>
