--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,7 @@
         <module>Lesson16</module>
         <module>Lesson19</module>
         <module>Lesson20</module>
+        <module>Lesson20Addition</module>
     </modules>
 
     <properties>
