--- a/pom.xml
+++ b/pom.xml
@@ -55,7 +55,7 @@
         <module>Lesson19</module>
         <module>Lesson20</module>
         <module>Lesson20Addition</module>
-        <module>Lesson21</module>
+        <module>Lesson21_JDBC</module>
         <module>Lesson22</module>
     </modules>
 
