--- a/Lesson21_JDBC/pom.xml
+++ b/Lesson21_JDBC/pom.xml
@@ -9,7 +9,7 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>Lesson21</artifactId>
+    <artifactId>Lesson21_JDBC</artifactId>
 
     <properties>
         <maven.compiler.source>19</maven.compiler.source>
