--- a/pom.xml
+++ b/pom.xml
@@ -73,7 +73,7 @@
         <module>Lesson20</module>
         <module>Lesson20Addition</module>
         <module>Lesson21_JDBC</module>
-        <module>Lesson22</module>
+        <module>Lesson22jdbc</module>
     </modules>
 
     <properties>
