--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,8 @@
         <module>Lesson20Addition</module>
         <module>Lesson21_JDBC</module>
         <module>Lesson22jdbc</module>
+        <module>Lesson23</module>
+        <module>Lesson24Web</module>
     </modules>
 
     <properties>
