--- a/Lesson24Web/pom.xml
+++ b/Lesson24Web/pom.xml
@@ -9,7 +9,7 @@
     <artifactId>Lesson24Web</artifactId>
     <packaging>war</packaging>
     <name>Lesson24Web Maven Webapp</name>
-    <url>http://maven.apache.org</url>
+    <url>https://maven.apache.org</url>
     <dependencies>
         <dependency>
             <groupId>junit</groupId>
@@ -18,6 +18,7 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+
     <build>
         <finalName>Lesson24Web</finalName>
     </build>
