--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,7 @@
         <module>Lesson21_JDBC</module>
         <module>Lesson22jdbc</module>
         <module>Lesson23</module>
+        <module>Lesson24Web</module>
     </modules>
 
     <properties>
