--- a/Lesson25Servlet/pom.xml
+++ b/Lesson25Servlet/pom.xml
@@ -5,16 +5,10 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>main</groupId>
-    <artifactId>Lesson24Servlets</artifactId>
+    <artifactId>Lesson25Servlet</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <name>Lesson24Servlets</name>
+    <name>Lesson25Servlet</name>
     <packaging>war</packaging>
-
-    <parent>
-        <groupId>groupId</groupId>
-        <artifactId>c18-onl2022</artifactId>
-        <version>1.0-SNAPSHOT</version>
-    </parent>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -30,7 +24,12 @@
             <version>10.0.0</version>
             <scope>provided</scope>
         </dependency>
-
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>${junit.version}</version>
+            <scope>test</scope>
+        </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-engine</artifactId>
