--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,7 @@
         <module>Lesson22jdbc</module>
         <module>Lesson23</module>
         <module>Lesson24Servlets</module>
+        <module>Lesson25Filter</module>
         <module>Lesson25Servlet</module>
     </modules>
 
