--- a/Lesson25Filter/pom.xml
+++ b/Lesson25Filter/pom.xml
@@ -5,9 +5,9 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>main</groupId>
-    <artifactId>Lesson25Servlet</artifactId>
+    <artifactId>Lesson25Filter</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <name>Lesson25Servlet</name>
+    <name>Lesson25Filter</name>
     <packaging>war</packaging>
 
     <parent>
@@ -25,12 +25,6 @@
 
     <dependencies>
         <dependency>
-            <groupId>jakarta.platform</groupId>
-            <artifactId>jakarta.jakartaee-web-api</artifactId>
-            <version>10.0.0</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
             <version>${junit.version}</version>
@@ -41,12 +35,6 @@
             <artifactId>junit-jupiter-engine</artifactId>
             <version>${junit.version}</version>
             <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
-            <version>1.18.24</version>
-            <scope>compile</scope>
         </dependency>
     </dependencies>
 
