--- a/pom.xml
+++ b/pom.xml
@@ -84,8 +84,8 @@
         <module>Lesson22jdbc</module>
         <module>Lesson23</module>
         <module>Lesson24Servlets</module>
-        <module>Lesson25Filter</module>
         <module>Lesson25Servlet</module>
+        <module>Lesson26ServletFilter</module>
     </modules>
 
     <properties>
