--- a/Lesson26ServletFilter/pom.xml
+++ b/Lesson26ServletFilter/pom.xml
@@ -5,9 +5,9 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>main</groupId>
-    <artifactId>Lesson25Filter</artifactId>
+    <artifactId>Lesson26ServletFilter</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <name>Lesson25Filter</name>
+    <name>Lesson26ServletFilter</name>
     <packaging>war</packaging>
 
     <parent>
@@ -24,6 +24,12 @@
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>jakarta.servlet</groupId>
+            <artifactId>jakarta.servlet-api</artifactId>
+            <version>5.0.0</version>
+            <scope>provided</scope>
+        </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
