--- a/Lesson26ServletFilter/src/main/webapp/WEB-INF/web.xml
+++ b/Lesson26ServletFilter/src/main/webapp/WEB-INF/web.xml
@@ -5,7 +5,7 @@
          version="5.0">
     <filter>
         <filter-name>encodingFilter</filter-name>
-        <filter-class>filter.EncodingFilter</filter-class>
+        <filter-class>filter.CodeFilter</filter-class>
         <init-param>
             <param-name>encoding</param-name>
             <param-value>UTF-8</param-value>
