--- a/Lesson26ServletFilter/src/main/webapp/WEB-INF/web.xml
+++ b/Lesson26ServletFilter/src/main/webapp/WEB-INF/web.xml
@@ -4,15 +4,17 @@
          xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_5_0.xsd"
          version="5.0">
     <filter>
-        <filter-name>encodingFilter</filter-name>
+        <filter-name>CodeFilter</filter-name>
         <filter-class>filter.CodeFilter</filter-class>
         <init-param>
-            <param-name>encoding</param-name>
+            <param-name>code</param-name>
             <param-value>UTF-8</param-value>
         </init-param>
     </filter>
     <filter-mapping>
-        <filter-name>encodingFilter</filter-name>
+        <filter-name>CodeFilter</filter-name>
         <url-pattern>/login</url-pattern>
     </filter-mapping>
+
+
 </web-app>
