--- a/Lesson26ServletFilter/src/main/webapp/WEB-INF/web.xml
+++ b/Lesson26ServletFilter/src/main/webapp/WEB-INF/web.xml
@@ -16,16 +16,16 @@
         <url-pattern>/login</url-pattern>
     </filter-mapping>
 
-    <filter>
-        <filter-name>WebCodeFilter</filter-name>
-        <filter-class>filter.CodeFilter</filter-class>
-        <init-param>
-            <param-name>code</param-name>
-            <param-value>UTF-8</param-value>
-        </init-param>
-    </filter>
-    <filter-mapping>
-        <filter-name>WebCodeFilter</filter-name>
-        <url-pattern>/login</url-pattern>
-    </filter-mapping>
+    <!--    <filter>-->
+    <!--        <filter-name>WebCodeFilter</filter-name>-->
+    <!--        <filter-class>filter.CodeFilter</filter-class>-->
+    <!--        <init-param>-->
+    <!--            <param-name>code</param-name>-->
+    <!--            <param-value>UTF-8</param-value>-->
+    <!--        </init-param>-->
+    <!--    </filter>-->
+    <!--    <filter-mapping>-->
+    <!--        <filter-name>WebCodeFilter</filter-name>-->
+    <!--        <url-pattern>/home</url-pattern>-->
+    <!--    </filter-mapping>-->
 </web-app>
