--- a/pom.xml
+++ b/pom.xml
@@ -83,7 +83,7 @@
         <module>Lesson21_JDBC</module>
         <module>Lesson22jdbc</module>
         <module>Lesson23</module>
-        <module>Lesson24Servlets</module>
+        <module>Lesson24CalculatorServlet</module>
         <module>Lesson25Servlet</module>
         <module>Lesson26ServletFilter</module>
     </modules>
