--- a/Lesson24CalculatorServlet/pom.xml
+++ b/Lesson24CalculatorServlet/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>main</groupId>
-    <artifactId>Lesson24Servlets</artifactId>
+    <artifactId>Lesson24CalculatorServlet</artifactId>
     <version>1.0-SNAPSHOT</version>
     <name>Lesson24Servlets</name>
     <packaging>war</packaging>
