--- a/pom.xml
+++ b/pom.xml
@@ -85,7 +85,9 @@
         <module>Lesson23</module>
         <module>Lesson24CalculatorServlet</module>
         <module>Lesson25Servlet</module>
-        <module>Lesson26ServletFilter</module>
+        <module>Lesson26LoginServlet</module>
+        <module>Lesson26ServletDatabase</module>
+        <module>Lesson27CSS</module>
     </modules>
 
     <properties>
