--- a/Lesson26ServletDatabase/pom.xml
+++ b/Lesson26ServletDatabase/pom.xml
@@ -42,6 +42,12 @@
             <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>main</groupId>
+            <artifactId>Lesson26LoginServlet</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
