--- a/pom.xml
+++ b/pom.xml
@@ -87,7 +87,7 @@
         <module>Lesson25Servlet</module>
         <module>Lesson26LoginServlet</module>
         <module>Lesson26ServletDatabase</module>
-        <module>Lesson27CSS</module>
+        <module>Lesson27CartServlet</module>
     </modules>
 
     <properties>
