--- a/Lesson26ServletDatabase/pom.xml
+++ b/Lesson26ServletDatabase/pom.xml
@@ -7,7 +7,7 @@
     <groupId>main</groupId>
     <artifactId>Lesson26ServletDatabase</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <name>Lesson26ServletDatabase</name>
+    <name>Lesson26ServletFilter</name>
     <packaging>war</packaging>
 
     <parent>
@@ -43,9 +43,15 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>main</groupId>
-            <artifactId>Lesson26LoginServlet</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <groupId>jakarta.servlet</groupId>
+            <artifactId>jakarta.servlet-api</artifactId>
+            <version>6.0.0</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>jakarta.servlet</groupId>
+            <artifactId>jakarta.servlet-api</artifactId>
+            <version>5.0.0</version>
             <scope>compile</scope>
         </dependency>
     </dependencies>
