--- a/Lesson25Servlet/pom.xml
+++ b/Lesson25Servlet/pom.xml
@@ -48,6 +48,12 @@
             <version>1.18.24</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>main</groupId>
+            <artifactId>Lesson26ServletDatabase</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
