--- a/Lesson27ServletDatabase/src/main/webapp/WEB-INF/web.xml
+++ b/Lesson27ServletDatabase/src/main/webapp/WEB-INF/web.xml
@@ -5,14 +5,14 @@
          version="5.0">
     <context-param>
         <param-name>db_driver</param-name>
-        <param-value>org.postgresql.Driver</param-value>
-    </context-param>
-    <context-param>
-        <param-name>db_url</param-name>
         <param-value>jdbc:postgresql://localhost:5432/c18-onl2022</param-value>
     </context-param>
     <context-param>
-        <param-name>db_user</param-name>
+        <param-name>db_url</param-name>
+        <param-value></param-value>
+    </context-param>
+    <context-param>
+        <param-name>db_login</param-name>
         <param-value>postgres</param-value>
     </context-param>
     <context-param>
