--- a/pom.xml
+++ b/pom.xml
@@ -39,20 +39,18 @@
             <version>42.5.4</version>
         </dependency>
 
-        <!-- https://mvnrepository.com/artifact/jakarta.servlet/jakarta.servlet-api -->
-        <dependency>
-            <groupId>jakarta.servlet</groupId>
-            <artifactId>jakarta.servlet-api</artifactId>
-            <version>6.0.0</version>
-            <scope>provided</scope>
-        </dependency>
+        <!--        &lt;!&ndash; https://mvnrepository.com/artifact/jakarta.servlet.jsp.jstl/jakarta.servlet.jsp.jstl-api &ndash;&gt;-->
+        <!--        <dependency>-->
+        <!--            <groupId>jakarta.servlet.jsp.jstl</groupId>-->
+        <!--            <artifactId>jakarta.servlet.jsp.jstl-api</artifactId>-->
+        <!--            <version>3.0.0</version>-->
+        <!--            <scope>provided</scope>-->
+        <!--        </dependency>-->
 
-
-        <!-- https://mvnrepository.com/artifact/jstl/jstl -->
         <dependency>
-            <groupId>jstl</groupId>
-            <artifactId>jstl</artifactId>
-            <version>1.2</version>
+            <groupId>org.glassfish.web</groupId>
+            <artifactId>jakarta.servlet.jsp.jstl</artifactId>
+            <version>2.0.0</version>
         </dependency>
 
     </dependencies>
@@ -85,7 +83,7 @@
         <module>Lesson24CalculatorServlet</module>
         <module>Lesson25Servlet</module>
         <module>Lesson26LoginServlet</module>
-        <module>Lesson27ServletDatabase</module>
+        <module>Lesson27ServletDatabaseStudents</module>
         <module>Lesson28CartServlet</module>
         <module>Lesson28PoemServlet</module>
     </modules>
