--- a/Lesson28OnlineStoreServlet/src/main/webapp/WEB-INF/web.xml
+++ b/Lesson28OnlineStoreServlet/src/main/webapp/WEB-INF/web.xml
@@ -19,4 +19,8 @@
         <param-name>db_password</param-name>
         <param-value>Barsukov28071992</param-value>
     </context-param>
+
+    <session-config>
+        <session-timeout>1</session-timeout>
+    </session-config>
 </web-app>
