--- a/Lesson32AllPatternTypes/pom.xml
+++ b/Lesson32AllPatternTypes/pom.xml
@@ -9,7 +9,7 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>TestCore</artifactId>
+    <artifactId>Lesson32AllPatternTypes</artifactId>
 
     <properties>
         <maven.compiler.source>19</maven.compiler.source>
