--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,11 @@
         <junit.jupiter.version>5.9.2</junit.jupiter.version>
         <junit.platform.version>1.9.1</junit.platform.version>
         <lombok.version>1.18.24</lombok.version>
+        <mavenCompalePlugin.version>3.10.1</mavenCompalePlugin.version>
+        <commons-lang.version>3.12.0</commons-lang.version>
+        <modelmapper.version>3.1.1</modelmapper.version>
+        <logback-classic.version>1.4.5</logback-classic.version>
+        <logstash-logback-encoder.version>7.3</logstash-logback-encoder.version>
         <jakarta.version>10.0.0</jakarta.version>
         <mavenCompalePlugin.version>3.10.1</mavenCompalePlugin.version>
         <commons-lang.version>3.12.0</commons-lang.version>
