--- a/Lesson29E-StoreController/src/main/resources/application.properties
+++ b/Lesson29E-StoreController/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 db.url=jdbc:postgresql://localhost:5432/postgres
 db.login=postgres
-db.pass=root
+db.pass=Barsukov28071992
 db.driver=org.postgresql.Driver
