--- a/Lesson29E-StoreController/src/main/webapp/WEB-INF/web.xml
+++ b/Lesson29E-StoreController/src/main/webapp/WEB-INF/web.xml
@@ -15,7 +15,7 @@
     </context-param>
     <context-param>
         <param-name>db_password</param-name>
-        <param-value>root</param-value>
+        <param-value>Barsukov28071992</param-value>
     </context-param>
     <context-param>
         <param-name>db_driver</param-name>
