--- a/Lesson37SpringPart1/pom.xml
+++ b/Lesson37SpringPart1/pom.xml
@@ -9,7 +9,7 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>Lesson37Spring</artifactId>
+    <artifactId>Lesson37SpringPart1</artifactId>
 
     <properties>
         <maven.compiler.source>20</maven.compiler.source>
