--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,7 @@
         <module>Lesson37SpringPart1</module>
         <module>Lesson37SpringPart2</module>
         <module>Lesson38SpringApplicationContext</module>
+        <module>CalculatorWithArabic</module>
     </modules>
 
     <properties>
