--- a/pom.xml
+++ b/pom.xml
@@ -263,6 +263,12 @@
             <version>1.9.19</version>
             <scope>runtime</scope>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-core -->
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-core</artifactId>
+            <version>6.0.2</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
