--- a/pom.xml
+++ b/pom.xml
@@ -269,6 +269,11 @@
             <artifactId>spring-security-core</artifactId>
             <version>6.0.2</version>
         </dependency>
+        <dependency>
+            <groupId>org.hibernate.validator</groupId>
+            <artifactId>hibernate-validator</artifactId>
+            <version>8.0.0.Final</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
