--- a/Lesson41SpringMvcEstore/src/main/resources/application.properties
+++ b/Lesson41SpringMvcEstore/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-db.url=jdbc:postgresql://demo-postgres:5432/postgres
-db.login=root
-db.pass=1234
+db.url=jdbc:postgresql://localhost:5432/postgres
+db.login=postgres
+db.pass=Barsukov28071992
