--- a/pom.xml
+++ b/pom.xml
@@ -282,6 +282,12 @@
             <version>3.0.6</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.thymeleaf</groupId>
+            <artifactId>thymeleaf</artifactId>
+            <version>3.1.1.RELEASE</version>
+        </dependency>
+
     </dependencies>
     <build>
         <plugins>
